# eis_helper

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260408_000001_initial.py  20260408_000002_add_procurements.py  20260408_000003_procurements_full_schema.py  20260408_000004_ckan_raw_tables.py
backend/locales/en/: messages.json
backend/locales/lv/: messages.json
backend/src/app_template/: __init__.py  celery_app.py  deps.py  lifespan.py  main.py  settings.py  worker.py
backend/src/app_template/modules/auth/: router.py  schemas.py  service.py
backend/src/app_template/modules/chat/: models.py  router.py  service.py  sync.py
backend/src/app_template/modules/documents/: models.py  router.py  schemas.py  service.py  tasks.py
backend/src/app_template/modules/extraction/: build_company_index.py  collector_classes.py  collector_companies.py  collector_config.py  eis_utils.py  (+19 more)
backend/tests/: conftest.py
backend/tests/contract/: test_openapi.py
backend/tests/integration/: conftest.py  test_candidate_classification_storage.py  test_collect_eis_projects.py  test_dashboard_company_view.py  test_dashboard_risk_view.py  test_document_selection.py  test_download_eis_procurement_full.py  test_download_reports_pipeline.py  test_extract_from_documents_vision.py  test_extract_outcomes_pipeline.py  test_health.py  test_organize_eis_building_docs.py  test_utils.py
backend/tests/unit/: test_auth_schemas.py  test_chat_service.py
(+141 files in other folders)
