[project]
name = "app-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "pymupdf>=1.23.0",
    "pypdf>=4.0.0",
    "rarfile>=4.0",
    "rapidfuzz>=3.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.4.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.35",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pre-commit>=3.8.0",
    "pyright>=1.1.379",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.4",
]
workers = [
    "celery>=5.4.0",
    "redis>=5.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=app_template --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app_template"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.coverage.run]
branch = true
source = ["app_template"]

[tool.coverage.report]
show_missing = true
skip_covered = false
